2013-08-27  Dario Rodriguez <dario@artica.es>

	* include/functions_incidents.php: New function to filter
	incidents by notify by email field
	* operation/contacts/contact_incidents.php
	operation/contacts/contact_detail.php
	operation/contacts/contact_manage.php
	operation/contacts/contact_inventory.php: New structure for
	contact section and new view for contact's incidents.

2013-08-27  Sergio Martin <sergio.martin@artica.es>

	* operation/projects/project_group_detail.php: Add missed change
	in previous commit

2013-08-27  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php
	include/styles/integria.css
	include/styles/calendar.css
	include/functions_form.php
	include/functions_calendar.php
	include/functions_db.php
	operation/leads/lead_detail.php
	operation/projects/project_overview.php
	operation/projects/task.php
	operation/projects/task_workunit.php
	operation/projects/project_group_detail.php
	operation/projects/user_project_timegraph.php
	operation/projects/project_timegraph.php
	operation/projects/gantt.php
	operation/projects/people_manager.php
	operation/projects/milestones.php
	operation/projects/project_tracking.php
	operation/projects/task_planning.php
	operation/side_menu.php
	operation/workorders/wo_category.php: Change visual styles
	in several screens and fix some bugs

2013-08-27  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php
	include/styles/integria.css
	include/functions_form.php
	include/ajax/crm.php
	operation/projects/task_detail.php
	operation/users/user_task_assigment.php
	operation/users/user_workunit_report.php
	operation/inventories/inventory_reports_detail.php
	operation/user_report/monthly_graph.php
	operation/user_report/report_full.php
	images/objects/id.png
	godmode/grupos/configurar_grupo.php
	godmode/grupos/lista_grupos.php
	godmode/usuarios/configurar_usuarios.php
	godmode/usuarios/role_manager.php
	godmode/usuarios/lista_usuarios.php