@@ -388,11 +388,13 @@ if ((!isset($_GET["update"])) AND (!isset($_GET["create"]))){
 
 			// Category
 			echo "<td class=f9>";
-			echo "<img src='images/groups_small/".get_db_sql ("SELECT icon FROM tkb_category WHERE id = ".$row["id_category"]). "'>";
+			$category_name = get_db_sql ("SELECT name FROM tkb_category  WHERE id = ".$row["id_category"]);
+			echo "<img title='$category_name' src='images/groups_small/".get_db_sql ("SELECT icon FROM tkb_category WHERE id = ".$row["id_category"]). "'>";
 
 			// Product
 			echo "<td class=f9>";
-			echo "<img src='images/products/". get_db_sql ("SELECT icon FROM tkb_product WHERE id = ".$row["id_product"]). "'>";
+			$product_name = get_db_sql ("SELECT name FROM tkb_product WHERE id = ".$row["id_product"]);
+			echo "<img title='$product_name' src='images/products/". get_db_sql ("SELECT icon FROM tkb_product WHERE id = ".$row["id_product"]). "'>";
 
 			// Language
 			echo "<td class=f9>";
